<resources>
    <string name="app_name">KeyGuardScreenLock</string>
    <string name="android_version_not_supported">Android version of your device soesn\'t support the application</string>
    <string name="place_your_finger_on_the_fingerprint_scanner">Place your finger on the fingerprint scanner</string>
    <string name="success">Authentication successful</string>
    <string name="lock_the_phone">Lock the Phone</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="fingerprint_image">Fingerprint image</string>
</resources>
