<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tv_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        />

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/fingerprint_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:srcCompat="@drawable/ic_fingerprint_24px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="27dp"
        android:gravity="center_horizontal"
        android:text="@string/place_your_finger_on_the_fingerprint_scanner" />
    <Button
        android:id="@+id/lock"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/lock_the_phone"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/enableBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/enable"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/disableBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/disable"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>